2022-02-10  Roland Winkler  <winkler@gnu.org>
	Update copyright.  Quieten compiler.
	* lisp/bbdb.el: Require cl-lib.

2021-01-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el: Add third arg to define-obsolete-variable-alias
	and define-obsolete-function-alias.

2020-09-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el (bbdb-sc-attribution-field): Quieten compiler.

2020-09-28  Stefan Monnier <monnier@iro.umontreal.ca>
	* lisp/bbdb.el, lisp/bbdb-tex.el, lisp/bbdb-migrate.el: Require
	cl-lib.

2020-08-29  David Maus <dmause@dmaus.name>
	Use wl sticky buffer name if necessary.
	* lisp/bbdb-wl.el (bbdb/wl-header): Use wl sticky buffer name if
	necessary.

2020-08-29  Stefan Monnier <monnier@iro.umontreal.ca>
	Use cl-defstruct to define BBDB record type.
	* lisp/bbdb-com.el: Use cl-defstruct to define BBDB record type.
	* lisp/bbdb-com.el, lisp/bbdb-com.el, lisp/bbdb-snarf.el:
	* lisp/bbdb-migrate.el: Use setf to set records.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-search): New keywords :invert and
	:case-fold.  Allow arbitrary functions for keyword :bool.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode): Bind buffer-undo-list to t.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Declare functions used for insinuation.
	(bbdb-init-functions): Renamed from bbdb-init-forms.

2019-09-27  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-auto-update-init): Use
	wl-summary-redisplay-hook for wanderlust.

2019-06-08  Roland Winkler  <winkler@gnu.org>
	* bbdb-com.el (bbdb-search-read): When region is active make it
	the default string to match.

2019-03-09  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb-com.el, bbdb.el: Fix some warnings; plus cosmetic changes

	* bbdb-com.el, bbdb.el: Use #' to quote functions.
	* bbdb-com.el (bbdb-dial): Clarify backslash escaping in regexp.
	(bbdb-mail-aliases): η-reduce.
	(bbdb-mail-aliases): Use abbrev-symbol.